# clawness

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  install.ps1  install.sh  pyproject.toml  uninstall.ps1  uninstall.sh
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
agents/: arch-challenger.md  code-critic.md  perf-auditor.md  refactor-advisor.md  security-blue-team.md  security-red-team.md  test-writer.md
clawness/: __init__.py  cli.py  core.py  embeddings.py  guard.py  init.py  plan.py  trust.py
hooks/: access_guard.py  claude_hook.py  compress_output.py  ensure_deps.py  git_check.py  memory_init.py  plan_gate.py  setup_agents.py  setup_settings.py  setup_skills.py  trust_ledger.py
rules/_mandatory/: ENF-CURRENT-001.yml  ENF-SEC-001.yml  ENF-SEC-002.yml  ENF-SEC-003.yml  ENF-SEC-004.yml  ENF-SEC-005.yml  ENF-SEC-006.yml  ENF-TEST-001.yml
rules/bash/: SH-CHECK-001.yml  SH-QUOTE-001.yml  SH-SHELLCHECK-001.yml  SH-STRICT-001.yml
rules/capacitor/: CAP-LIFECYCLE-001.yml  CAP-PERM-001.yml  CAP-PLATFORM-001.yml  CAP-STORE-001.yml  CAP-SYNC-001.yml  CAP-WEBVIEW-001.yml
rules/css/: CSS-FOCUS-001.yml  CSS-IMPORTANT-001.yml  CSS-LAYOUT-001.yml  CSS-RESPONSIVE-001.yml  CSS-UNITS-001.yml  CSS-VARS-001.yml
rules/docker/: DK-CACHE-001.yml  DK-MULTISTAGE-001.yml  DK-SLIM-001.yml  (+3 more)
tests/: ground_truth.json  test_core.py  test_eval.py  test_git_check.py  test_guard.py  test_memory.py  test_semantic_and_plan.py  test_trust.py
writ_lite/: __init__.py  cli.py  core.py  embeddings.py  init.py  plan.py
(+93 files in other folders)
